<resources>
    <string name="app_name">nofem</string>
    <string name="All_nofus">nofus</string>
    <string name="All_file">파일</string>
    <string name="All_folder">폴더</string>
    <string name="All_ok">확인</string>
    <string name="All_cancle">종료</string>
    <string name="All_up">올림</string>
    <string name="All_down">내림</string>
    <string name="All_edit">수정</string>
    <string name="All_save">저장</string>
    <string name="All_remove">삭제</string>
    <string name="All_index">주석</string>
    <string name="All_sucess">성공</string>
    <string name="All_fail">실패</string>
    <string name="All_blue">공유</string>
    <string name="All_saveafter">저장됨</string>
    <string name="All_search">검색</string>
    <string name="All_gulup">글 올림</string>
    <string name="All_guldown">글 내림</string>
    <string name="All_sizesmall">작게</string>
    <string name="All_sizesmaller">조금 작게</string>
    <string name="All_sizemiddle">중간</string>
    <string name="All_sizebigger">조금 크게</string>
    <string name="All_sizebig">크게</string>
    <string name="All_size">글자 크기</string>
    <string name="All_move">이동</string>
    <string name="All_sort">정렬</string>
    <string name="All_add">추가</string>
    <string name="All_return">돌아가기</string>
    <string name="All_brank">내용 없음</string>
    <string name="All_stringerror">불가능한 문자열</string>
    <string name="Main_move_error">옮길 수 없는 폴더</string>
    <string name="Main_add">파일 혹은 폴더 추가</string>
    <string name="Main_name_existerror">이미 있는 이름</string>
    <string name="Main_delete">파일 혹은 폴더 삭제</string>
    <string name="Main_delete_error">정렬할 내용 없음</string>
    <string name="Main_move">이동할 파일/폴더 선택</string>
    <string name="Main_rename">이름변경</string>
    <string name="Main_Con_saveafter">%s이 저장됨</string>
    <string name="Main_Con_indexturnerror">인덱스 한계</string>
    <string name="Main_Con_indextemsave">임시저장된 인덱스를 저장하려면 전체 저장을 누르세요</string>
    <string name="Net_Main_connecting">연결중…</string>
    <string name="Net_Main_notconnected">연결할 수 없음</string>
    <string name="Net_Main_noresult">검색 결과 없음</string>
    <string name="Net_Con_cannotadd">저장할 수 없음</string>
    <string name="Menu_Main_namechange">이름 변경</string>
    <string name="Menu_Main_backup">백업</string>
    <string name="Menu_Main_restore">복원</string>
    <string name="Menu_Con_indexset">주석모음</string>
</resources>
